--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-/* ======= Configuração Geral ======= */
 body {
     font-family: "Segoe UI", Arial, sans-serif;
     margin: 0;
-    background: linear-gradient(135deg, #e3f2fd, #bbdefb);
-    color: #333;
+    background: linear-gradient(135deg, #e3f2fd, #e690bb);
+    color: #000000;
 }
 
-/* ======= Cabeçalho ======= */
 header {
-    background: #0d47a1;
+    background: #47031b;
     color: white;
     padding: 25px;
     text-align: center;
@@ -21,7 +19,7 @@ header h1 {
 }
 
 header nav a {
-    color: #ffeb3b;
+    color: #e690bb;
     text-decoration: none;
     font-weight: bold;
     display: inline-block;
@@ -32,7 +30,6 @@ header nav a:hover {
     text-decoration: underline;
 }
 
-/* ======= Grade de Trabalhos ======= */
 main {
     max-width: 1000px;
     margin: 40px auto;
@@ -45,7 +42,6 @@ main {
     gap: 25px;
 }
 
-/* ======= Card ======= */
 .card {
     background: white;
     border-radius: 16px;
@@ -62,7 +58,7 @@ main {
 
 .card h2 {
     margin-top: 0;
-    color: #0d47a1;
+    color: #47031b;
 }
 
 .card p {
@@ -74,7 +70,7 @@ main {
 .card a {
     display: inline-block;
     padding: 10px 18px;
-    background: #0d47a1;
+    background: #47031b;
     color: white;
     text-decoration: none;
     border-radius: 8px;
@@ -83,10 +79,9 @@ main {
 }
 
 .card a:hover {
-    background: #08306b;
+    background: #e690bb;
 }
 
-/* ======= Rodapé ======= */
 footer {
     text-align: center;
     padding: 15px;
